// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Crition Container snapshot is grading 1`] = `
<Fragment>
  <RadioSet
    name="random name"
    value="selected option"
  >
    <Radio
      className="criteria-option"
      description="1 points"
      disabled={false}
      key="option name"
      onChange={[Function]}
      value="option name"
    >
      this label
    </Radio>
    <Radio
      className="criteria-option"
      description="2 points"
      disabled={false}
      key="option name 2"
      onChange={[Function]}
      value="option name 2"
    >
      this label 2
    </Radio>
  </RadioSet>
</Fragment>
`;

exports[`Radio Crition Container snapshot is not grading 1`] = `
<Fragment>
  <RadioSet
    name="random name"
    value="selected option"
  >
    <Radio
      className="criteria-option"
      description="1 points"
      disabled={true}
      key="option name"
      onChange={[Function]}
      value="option name"
    >
      this label
    </Radio>
    <Radio
      className="criteria-option"
      description="2 points"
      disabled={true}
      key="option name 2"
      onChange={[Function]}
      value="option name 2"
    >
      this label 2
    </Radio>
  </RadioSet>
</Fragment>
`;
